Add background image and change html code in index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>RASA Chatbot</title>
   </head>
-  <body>
+  <body style="background-image: url('paly.jpg'); background-size: cover; background-repeat: no-repeat;">
     <div id="rasa-chat-widget" data-websocket-url="http://localhost:5006/socket.io"></div>
     <script src="https://unpkg.com/@rasahq/rasa-chat" type="application/JavaScript"></script>
   </body>
